--- a/production-backend/src/main/resources/application.yaml
+++ b/production-backend/src/main/resources/application.yaml
@@ -1,3 +1,26 @@
 spring:
   application:
     name: production-backend
+
+  datasource:
+    username: userDev
+    password: user123
+    url: jdbc:h2:mem:banco;DB_CLOSE_DELAY=-1
+    driver-class-name: org.h2.Driver
+
+  jpa:
+    database-plataform: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
+  flyway:
+    enabled: true
+    locations: classpath:db/migration
+    baseline-on-migrate: true
+
+  docker:
+    compose:
+      enabled: true
