config final docker

--- a/production-backend/src/main/resources/application.yaml
+++ b/production-backend/src/main/resources/application.yaml
@@ -9,7 +9,10 @@ spring:
     driver-class-name: org.h2.Driver
 
   jpa:
-    database-plataform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
 
   h2:
     console:
@@ -24,3 +27,7 @@ spring:
   docker:
     compose:
       enabled: true
+
+  logging:
+    level:
+      org.flywaydb: DEBUG
